fix: horizontal scroll removed

--- a/src/App.css
+++ b/src/App.css
@@ -12,17 +12,7 @@ html,body {
   width: 100vw;
   height: 100vh;
   margin: 0;
-}
-
-/* Hide scrollbar for Chrome, Safari and Opera */
-body::-webkit-scrollbar {
-  display: none;
-}
-
-/* Hide scrollbar for IE, Edge and Firefox */
-body {
--ms-overflow-style: none;  /* IE and Edge */
-scrollbar-width: none;  /* Firefox */
+  overflow-x: hidden;
 }
 
 video {
@@ -96,6 +86,8 @@ video {
   justify-content: center;
   font-size: 3rem;
 }
+
+
 
 .services {
   background-image: url('/images/img-2.jpg');
