--- a/src/components/css/HeroSection.css
+++ b/src/components/css/HeroSection.css
@@ -30,6 +30,18 @@
   padding: 0;
   margin-bottom: 0;*/
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hero-container::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hero-container {
+-ms-overflow-style: none;  /* IE and Edge */
+scrollbar-width: none;  /* Firefox */
+}
+
 /*
 video {
   /*object-fit: contain;
